# bili-cli

./: Cargo.toml  README.md
src/: api.rs  bvid.rs  cli.rs  main.rs  models.rs
src/commands/: download.rs  frames.rs  info.rs  links.rs  mod.rs  search.rs  subtitle.rs  transcript.rs
